--- a/bruteforce/index.html
+++ b/bruteforce/index.html
@@ -64,7 +64,7 @@
   <!-- Page footer -->
   <footer>
   <hr />
-  <p class="copyright">Created by <a href="https://jstrieb.github.io">Jacob Strieb</a>.</p>
+  <p class="copyright">Created by <a href="https://fgiordano.tech">Jacob Strieb</a>.</p>
   </footer>
 </body>
 
