translate incorrect password msg

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
   <!-- Display errors in a big red box -->
   <div class="error red-border" style="display: none">
     <p id="errortext">Error</p>
-    <button onclick="main()">Try again</button>
-    <a href="https://fgiordano.tech/link-lock"><button>Lock a link</button></a>
-    <a href="https://fgiordano.tech/link-lock/decrypt/" id="no-redirect" target="_blank"><button>Decrypt without redirect</button></a>
+    <button onclick="main()">Intentar de nuevo</button>
+    <a href="https://fgiordano.tech/link-lock"><button>Crear un link encriptado</button></a>
+    <a href="https://fgiordano.tech/link-lock/decrypt/" id="no-redirect" target="_blank" disable><button>Decriptar sin redireccion</button></a>
   </div>
 </body>
 
