replace old links

--- a/bruteforce/index.html
+++ b/bruteforce/index.html
@@ -65,7 +65,7 @@
   <!-- Page footer -->
   <footer>
   <hr />
-  <p class="copyright">Created by <a href="https://fgiordano.tech">Jacob Strieb</a>.</p>
+  <p class="copyright">Created by <a href="https://franco.giordano.ar">Jacob Strieb</a>.</p>
   </footer>
 </body>
 
