--- a/decrypt/index.html
+++ b/decrypt/index.html
@@ -42,7 +42,7 @@
   <div class="error red-border" style="display: none">
     <p id="errortext">Error</p>
     <button onclick="main()">Try again</button>
-    <a href="https://fgiordano.tech/link-lock"><button>Lock a link</button></a>
+    <a href="https://franco.giordano.ar/link-lock"><button>Lock a link</button></a>
   </div>
 
   <h1>Decrypt Link Lock URLs</h1>
@@ -75,7 +75,7 @@
   <!-- Page footer -->
   <footer>
   <hr />
-  <p class="copyright">Created by <a href="https://fgiordano.tech">Jacob Strieb</a>.</p>
+  <p class="copyright">Created by <a href="https://franco.giordano.ar">Jacob Strieb</a>.</p>
   </footer>
 </body>
 </body>
