--- a/hidden/index.html
+++ b/hidden/index.html
@@ -42,18 +42,18 @@
   <div class="error red-border" style="display: none">
     <p id="errortext">Error</p>
     <button onclick="main()">Try again</button>
-    <a href="https://jstrieb.github.io/link-lock"><button>Lock a link</button></a>
+    <a href="https://franco.giordano.ar/link-lock"><button>Lock a link</button></a>
   </div>
 
   <h1>Create Hidden Bookmarks</h1>
-  <p>It is possible to protect bookmarks with a password using <a href="https://jstrieb.github.io/link-lock" target="_blank">Link Lock</a>, but a link that needs a password may appear suspicious to someone else seeing it. Hidden bookmarks solve this problem.</p>
+  <p>It is possible to protect bookmarks with a password using <a href="https://franco.giordano.ar/link-lock" target="_blank">Link Lock</a>, but a link that needs a password may appear suspicious to someone else seeing it. Hidden bookmarks solve this problem.</p>
   <p>Hidden bookmarks are disguised to be identical to normal bookmarks, with one exception: clicking them in the right order will open a hidden link. <b>To open the hidden link, click the disguised bookmark first, and then click the decrypt bookmark next.</b> The same decrypt bookmark works for all disguised bookmarks.</p>
-  <p>Read more about how hidden bookmarks work <a target="_blank" href="https://jstrieb.github.io/projects/hidden-bookmarks/">here</a>.</p>
+  <p>Read more about how hidden bookmarks work <a target="_blank" href="https://franco.giordano.ar/projects/hidden-bookmarks/">here</a>.</p>
 
   <p>Here is how to create hidden bookmarks:</p>
   <ol>
     <li>
-      <a href="https://jstrieb.github.io/link-lock">Add a password to the hidden link</a> if you have not done so already.
+      <a href="https://franco.giordano.ar/link-lock">Add a password to the hidden link</a> if you have not done so already.
     </li>
     <li>
       Drag the "decrypt" bookmark below to your bookmarks bar.
@@ -183,7 +183,7 @@ try {
   if (params.unencrypted) {
     window.location.href = params.url;
   } else {
-    window.location.href = "https://jstrieb.github.io/link-lock/" + window.location.hash;
+    window.location.href = "https://franco.giordano.ar/link-lock/" + window.location.hash;
   }
 } catch {
   window.location.replace("https://gmail.com");
