--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
   <div class="error red-border" style="display: none">
     <p id="errortext">Error</p>
     <button onclick="main()">Intentar de nuevo</button>
-    <a href="https://jstrieb.github.io/link-lock"><button>Crear un link encriptado</button></a>
-    <a href="https://jstrieb.github.io/link-lock/decrypt/" id="no-redirect" target="_blank"><button>Decriptar sin redireccion</button></a>
-    <a href="https://jstrieb.github.io/link-lock/hidden/" id="hidden" target="_blank"><button>Crear un marcador oculto</button></a>
+    <a href="https://franco.giordano.ar/link-lock"><button>Crear un link encriptado</button></a>
+    <a href="https://franco.giordano.ar/link-lock/decrypt/" id="no-redirect" target="_blank"><button>Decriptar sin redireccion</button></a>
+    <a href="https://franco.giordano.ar/link-lock/hidden/" id="hidden" target="_blank"><button>Crear un marcador oculto</button></a>
   </div>
 </body>
 
